traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:30: error: not found: value x
        changeDiag(x,y);
                   ^TraversalDiagonal:30: error: not found: value y
        changeDiag(x,y);
                     ^