traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  
  var cpt = 0;
  
  def changeDiag(x : Int, y : Int) {
    
    if (diag < 6) {
      setPos(0 , diag + 1);
    } else if (diag >= 6) {
      setPos(getX()-1, 6);
    }
    
  }
  
  def diagonale() {
    
    ecritMessage(cpt);
    
    if ((getX() == 0) && (getY == 0)) {
      
      changeDiag(getX() , getY());
      diag += 1;
      cpt += 1;
    } else {
      
      setPos(getX()+1 , getY()+1);
      cpt +=1;
      
      if (estFaceMur == true) {
        changeDiag(x,y);
        diag +=1
        
      }
      
    }
    
    
  }
  
  while ((getX() != getMondeLargeur()-1) && (getY() != getMondeHauteur()-1)) {
    diagonale();
  }
  
  
}